<resources>
    <string name="app_name">NUMAD24Sp_Team33_Final</string>
    <string name="assetTitle">Asset Title Placeholder</string>
    <string name="buttonDayView">Day</string>
    <string name="buttonWeekView">Week</string>
    <string name="buttonMonthView">Month</string>
    <string name="buttonYearView">Year</string>
    <string name="refreshButton">Refresh</string>
    <string name="teslaButton">Tesla</string>
    <string name="appleButton">Apple</string>
    <string name="amazonButton">Amazon</string>
    <string name="guessHighButton">Guess High!</string>
    <string name="guessLowButton">Guess Low!</string>
    <string name="pointGuessValue">100</string>
</resources>